// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="sc-bdVaJa euflIf"
      >
        <li
          class="Tabs sc-bwzfXH gcXzca"
          data-test="tab_title card 1"
        >
          <span
            class="sc-htpNat defSvM"
            data-test="title-0"
          >
            title card 1
          </span>
        </li>
        <li
          class="Tabs sc-bwzfXH gcXzca"
          data-test="tab_title card 2"
        >
          <span
            class="sc-htpNat kkHdVD"
            data-test="title-1"
          >
            title card 2
          </span>
        </li>
      </ul>
      <hr
        class="sc-bxivhb jQoUZK"
      />
      <section
        title="title card 1"
      >
        children 1
      </section>
    </div>
  </body>,
  "container": <div>
    <ul
      class="sc-bdVaJa euflIf"
    >
      <li
        class="Tabs sc-bwzfXH gcXzca"
        data-test="tab_title card 1"
      >
        <span
          class="sc-htpNat defSvM"
          data-test="title-0"
        >
          title card 1
        </span>
      </li>
      <li
        class="Tabs sc-bwzfXH gcXzca"
        data-test="tab_title card 2"
      >
        <span
          class="sc-htpNat kkHdVD"
          data-test="title-1"
        >
          title card 2
        </span>
      </li>
    </ul>
    <hr
      class="sc-bxivhb jQoUZK"
    />
    <section
      title="title card 1"
    >
      children 1
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tabs component should match snapshot with one child 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="sc-bdVaJa iMQLgU"
      >
        <li
          class="Tabs sc-bwzfXH gcXzca"
          data-test="tab_title card 1"
        >
          <span
            class="sc-htpNat kkHdVD"
            data-test="title-0"
          >
            title card 1
          </span>
        </li>
      </ul>
      <hr
        class="sc-bxivhb jQoUZK"
      />
    </div>
  </body>,
  "container": <div>
    <ul
      class="sc-bdVaJa iMQLgU"
    >
      <li
        class="Tabs sc-bwzfXH gcXzca"
        data-test="tab_title card 1"
      >
        <span
          class="sc-htpNat kkHdVD"
          data-test="title-0"
        >
          title card 1
        </span>
      </li>
    </ul>
    <hr
      class="sc-bxivhb jQoUZK"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tabs component should match snapshot with props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="sc-bdVaJa iMQLgU"
      >
        <li
          class="Tabs sc-bwzfXH gcXzca"
          data-test="tab_title card 1"
        >
          <span
            class="sc-htpNat kkHdVD"
            data-test="title-0"
          >
            title card 1
          </span>
        </li>
        <li
          class="Tabs sc-bwzfXH gcXzca"
          data-test="tab_title card 2"
        >
          <span
            class="sc-htpNat defSvM"
            data-test="title-1"
          >
            title card 2
          </span>
        </li>
      </ul>
      <hr
        class="sc-bxivhb jQoUZK"
      />
      <section
        title="title card 2"
      >
        children 2
      </section>
    </div>
  </body>,
  "container": <div>
    <ul
      class="sc-bdVaJa iMQLgU"
    >
      <li
        class="Tabs sc-bwzfXH gcXzca"
        data-test="tab_title card 1"
      >
        <span
          class="sc-htpNat kkHdVD"
          data-test="title-0"
        >
          title card 1
        </span>
      </li>
      <li
        class="Tabs sc-bwzfXH gcXzca"
        data-test="tab_title card 2"
      >
        <span
          class="sc-htpNat defSvM"
          data-test="title-1"
        >
          title card 2
        </span>
      </li>
    </ul>
    <hr
      class="sc-bxivhb jQoUZK"
    />
    <section
      title="title card 2"
    >
      children 2
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
